syntax = "proto3";

package terrainium.v1;

message ActivateRequest {
  string terrain_name = 2;
  string biome_name = 3;
  string toml_path = 4;
}

message ActivateResponse {}
